--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
       "mo",
       "tech"
     ],
-    "website": "https//telegram.dog/Midukki_RoBoT",
+    "website": "https://github.com/allnewmovieintimes/Group-Managing-Bot-",
     "repository": "https://github.com/allnewmovieintimes/Group-Managing-Bot-",
     "env": {
         "BOT_TOKEN": {
